[metadata]
name = insyt
version = 0.0.1
license = Apache License 2.0
description = Innovative Network Security Technologies
long_description = file: README.md
author = Damon Tingey
author_email = damon.tingey@byu.edu

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pandas
    watchdog
    tokenizers
    transformers
    torch
    ollama
    rq
[options.package_data]
insyt =
    py.typed
    **/Modelfile

[options.packages.find]
    exclude = insyt.tests
