[metadata]
name = insyt
version = 0.0.1
license = Apache License 2.0
description = Innovative Network Security Technologies
long_description = file: README.md
author = Damon Tingey
author_email = damon.tingey@byu.edu

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pandas~=2.1.4
    tokenizers~=0.15.0
    transformers~=4.39.3
    torch~=2.1.2
    ollama~=0.1.4
    rq~=1.15.1
    fastapi~=0.110.1
    uvicorn[standard]~=0.29.0
    watchfiles~=0.21.0
    sqlalchemy~=2.0.29
[options.package_data]
insyt =
    py.typed
    **/Modelfile
    **/dist/**/*

[options.packages.find]
    exclude = insyt.tests

[options.entry_points]
console_scripts =
    insyt = insyt.__main__:main
    insyt-server = insyt.server:main
